--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
+    "msw": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "react-star-ratings": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^11.0.3",
     "vite-plugin-next-react-router": "^0.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
@@ -37,7 +42,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "msw": "^2.6.6",
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -45,5 +49,10 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
