--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-router-dom": "^7.0.1",
     "react-star-ratings": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^11.0.3",
-    "vite-plugin-next-react-router": "^0.7.1"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
