--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "react-star-ratings": "^2.3.0",
+    "recoil": "^0.7.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^11.0.3"
   },
