--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
     "msw": "^1.3.0",
+    "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
